# Ray-Tracing-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
Assets/Shaders/VK/: Shadow.vert  Shadow.vert.spv
GUI/: CMakeLists.txt  GuiInterface.h  ImGuiInterface.cpp  ImGuiInterface.h  ImGuiInterface_OpenGL3Win32.cpp  ImGuiInterface_OpenGL3Win32.h  ImGuiInterface_VulkanWin32.cpp  ImGuiObject.cpp  ImGuiObject.h  ImGuiObject_OpenGL3Win32.cpp  ImGuiObject_OpenGL3Win32.h  ImGuiObject_VulkanWin32.cpp  ImGuiObject_VulkanWin32.h
GameEngine/: CMakeLists.txt
GameEngine/AI/PathFinding/: NavigationGrid.cpp  NavigationGrid.h  NavigationMap.h  NavigationMesh.cpp  NavigationMesh.h  NavigationPath.h  SecurityCallbackClass.h
GameEngine/AI/PushdownAutomata/: PushdownMachine.cpp  PushdownMachine.h  PushdownState.h
GameEngine/AI/StateMachine/: State.h  StateMachine.cpp  StateMachine.h  StateTransition.h
GameEngine/AssetsHandling/: AssetLoader.h
GameEngine/Debugging/: Debug.cpp  Debug.h
GameEngine/EntityComponents/: AnimatedObject.cpp  AnimatedObject.h  GameObject.cpp  GameObject.h  GuiObject.h  Particle.h  ParticleSystem.h  RenderObject.cpp  RenderObject.h  SceneNode.cpp  SceneNode.h  StateGameObject.cpp  StateGameObject.h  Transform.cpp  Transform.h
GameEngine/Graphics/Renderer/RenderingSupport/: RendererBase.h
GameEngine/Scene/: AnimationController.cpp  AnimationController.h  GameAssets.cpp  GameAssets.h  GameWorld.cpp  GameWorld.h  PlayerBase.cpp  PlayerBase.h  ScreenManagerBase.cpp  ScreenManagerBase.h
GameEngine/Scene/Terrain/: Terrain.h
GameEngine/WindowingAndInput/Win32/: Win32Window.cpp
Networking/: CMakeLists.txt
OpenGLRendering/: CMakeLists.txt  OGLAssetLoader.cpp  OGLAssetLoader.h  OGLRenderer.h
SampleGame/: CMakeLists.txt  Configurations.h  GameAssets.cpp  GameAssets.h  GameManager.cpp  GameManager.h  Main.cpp  PlatformConfigurations.h  SampleGame.cpp  SampleGame.h  SampleGameAssets.cpp  SampleGameAssets.h  SinglePlayerGame.cpp  SinglePlayerGame.h
SampleGame/GameObjects/: Box.h  Floor.h  HudElement.h
SampleGame/Player/: Player.cpp  Player.h  PlayerController.h
SampleGame/Renderers/: OGLSampleGameRenderer.cpp  OGLSampleGameRenderer.h  VulkanSampleGameRenderer.cpp  VulkanSampleGameRenderer.h
SampleGame/Screens/: GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  ScreenManager.cpp  ScreenManager.h  SplashScreen.cpp  SplashScreen.h
VulkanRendering/: CMakeLists.txt  VulkanAssetLoader.cpp  VulkanAssetLoader.h  VulkanMesh.cpp  VulkanMesh.h  VulkanRenderer.h  VulkanTexture.cpp  VulkanTexture.h
